# wfautosplitter

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
src/: App.vue  i18n.ts  main.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: default_templates.json
src-tauri/src/: lib.rs  log_reader.rs  log_snapshot.rs  main.rs
src-tauri/src/db/: database.rs  mod.rs  runs.rs  schema.sql
src-tauri/src/parser/: events.rs  loader.rs  log_parser.rs  mod.rs  models.rs  overlay_bridge.rs  runtime.rs
src-tauri/src/templates/: commands.rs  model.rs  storage.rs
src/assets/: global.css
src/composables/: useSettings.ts  useTooltip.ts
src/locales/: en.json  ru.json  uk.json
src/services/: overlay.ts  settings.ts
src/theme/: initTheme.ts  themeManager.ts
src/types/: settings.ts
src/views/: Overlay.vue  OverlayWindow.vue  Races.vue  Settings.vue  TemplatesView.vue
src/views/components/: KeybindCapture.vue  RaceStatistic.vue  TemplateBuilder.vue  TemplateList.vue
